# DesignProof-Copy_Image_Detection-

./: .gitignore  COMPLETION_CERTIFICATE.md  IMPLEMENTATION_OVERVIEW.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  package-lock.json
backend/: package-lock.json
backend/node_service/: check_products.js  check_users.js  create_demo_user.js  dropAndSync.js  fix_trigger.js  forceSync.js  package-lock.json  package.json  scratch_test2.js  scratch_test_serp.js  sync_db.js  test_cred.js  (+5 more)
backend/python_service/: .env.example  ai_matching.py  app.py  app_clean.py  check_columns.py  check_defaults.py  check_results.py  check_serp_credits.py  check_tables.py  database.py  db.py  email_service.py  main.py  models.py  pyproject.toml  requirements.txt  serpapi_output.json  test_api_key.py  test_catbox.py  test_categorization_logic.py  test_counts.py  test_crawler_resilience.py  test_db.py  test_db_conn.py  test_email.py  test_empty_serp.py  test_engines.py  test_local_upload.py  test_resp.json  test_serpapi.out  test_serpapi.py  test_serpapi_direct.py  test_serpapi_file.py  test_tmpfiles.py  test_upload.py  test_upload_sim.py  test_upload_sim_v2.py  test_uploads.py  update_types.py
database/: schema.sql
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  DATABASE_GUIDE.md  DEPLOYMENT.md  SETUP_GUIDE.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
scratch/: check_brands.py  check_capital_users.py  check_db.py  check_notices.py  inspect_schema.py  show_table_data.py  test_serp.js  test_upload.py
(+98 files in other folders)
