name = "designproof-ai"
version = "1.0.0"
description = "DesignProof - AI/ML Service for Image Similarity Detection"

[dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
numpy = "^1.24.3"
opencv-python = "^4.8.1"
tensorflow = "^2.13.0"
torch = "^2.0.0"
torchvision = "^0.15.0"
pillow = "^10.0.0"
scikit-learn = "^1.3.1"
scipy = "^1.11.3"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pydantic = "^2.4.2"
aiohttp = "^3.9.0"
redis = "^5.0.1"
python-multipart = "^0.0.6"
celery = "^5.3.4"
httpx = "^0.25.0"

[dev-dependencies]
pytest = "^7.4.3"
black = "^23.10.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"

[tool.poetry.scripts]
uvicorn = "uvicorn:main"
